# BevyTetrix

./: Cargo.toml
src/: main.rs
src/bevy_tetrix/: camera.rs  load_board.rs  mod.rs  render_tetromino.rs  tetrix_plugin.rs
src/game_rules/: mod.rs
src/game_rules/entities/: game.rs  mod.rs  player.rs  tetromino.rs
src/game_rules/tests/: tests.rs
src/game_rules/tetrix_rules/: mod.rs  tetrix_rules.rs
