[package]
name = "bevy_tetrix"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
rand="0.3.14"